--- a/game.html
+++ b/game.html
@@ -22,14 +22,15 @@
         <h3 id="answer"> Answer Turn</h4><span id="answer_player_turn"></span>
      </div>
      <div id="output">
-        <h4 id="quest"></h4>
-        <label>Answer: </label><span> <input></span>
-        <button onclick="check()">Check</button>
      </div>
      <h2>Number 1</h5>
      <input id="Number1" placement="Number 1">
      <h2>Number 2</h5>
      <input id="Number2" placement="Number 2">
+     <br>
+     <br>
+     <button onclick="send()">Send</button>
     </center>
+<script src="game.js"></script>
 </body>
 </html>
